--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,9 @@
     <string name="transfer">Transfers</string>
     <string name="resume_transfer">Resume transfer</string>
     <string name="pause_transfer">Pause transfer</string>
+    <string name="size">Size</string>
+    <string name="added">Added</string>
+    <string name="modified">Last Modified</string>
+    <string name="details">Details</string>
 
 </resources>
